[package]
name = "mqtt-hb-netmon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
rumqttc = "0.20"
humantime = "2.1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
futures = "0.3.31"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
